--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                     </a>
                 </div> 
             </li>
-            <li><a href="#content">Services</a>
+            <li><a href="index.html">Services</a>
             <li><a href="aboutus.html">About Us</a>
             <li><a href="contact.html">Contact Us</a> 
         </ul>
