--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li>Chemistry</li>
                 <li>Physics</li>
                 <li>Psychology</li>
-                <li>Macoreconomics</li>
+                <li>Macroeconomics</li>
                 <li>Microeconomics</li>
             </ul>
         </div>
